<resources>
    <!-- Universal app strings -->
    <string name="app_name">Annota Mobile</string>
    <string name="title_home">Annota</string>
    <string name="title_dashboard">Camera</string>
    <string name="title_notifications">To-Do List</string>
    <string name="title_settings">Settings</string>
    <string name="title_library">Library</string>

    <!-- Login string -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_name">Full Name</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >4 characters</string>
    <string name="passwords_not_equal">Password not equal, please try again</string>
    <string name="login_failed">Login failed</string>
    <string name="registration_failed">Registration failed</string>
    <string name="logout">You have been logged out</string>
    <string name="auto_login_failed">Automatic login failed</string>
    <string name="login_welcome">Welcome</string>

    <!-- Errors -->
    <string name="no_internet">No response from server, check your internet?</string>
    <string name="incomplete_form">Please fill out all fields in form</string>
    <string name="empty_annotation">Annotation contains no discernible text!</string>
    <string name="server_error">Server error! Please try again later.</string>

    <!-- Annotation fragment -->
    <string name="photo_button">Take Photo</string>
    <string name="annotation_name">Name your annotation!</string>
    <string name="annotation_comments">Comments (why/how is this relevant?)</string>
    <string name="cat1">Main Category</string>
    <string name="cat2">Subcategory 1</string>
    <string name="cat3">Subcategory 2</string>
    <string name="annotation_button">Finalize Annotation</string>
    <string name="incompleteAnnotationData">Please complete every field!</string>

    <!-- Settings fragment -->
    <string name="pref_general_title">General</string>
    <string name="pref_lang">Language</string>
    <string name="pref_notif">Enable message notifications</string>
    <string name="pref_about">About</string>
    <string name="pref_version">App version</string>
    <string name="pref_fb_title">Send feedback</string>
    <string name="pref_fb_summary">Report technical issues or suggest new features</string>
    <string name="pref_colour_title">Theme</string>
    <string name="pref_logout_title">Logout</string>

    <!-- Library fragment -->
    <string name="search_button_title">Search criteria</string>
    <string name="sort_button_title">Sorting criteria</string>
    <string name="search_popup_title">Search criteria</string>
    <string name="sort_popup_title">Sort criteria</string>
    <string name="search_popup_ok">Search!</string>
    <string name="sort_popup_ok">Sort!</string>
    <string name="popup_cancel">Cancel</string>
    <string name="criteria_type_prompt">Select search type</string>
    <string name="by_content_title">Please enter search string</string>
    <string name="by_category_cat1">Category 1</string>
    <string name="by_category_cat2">Category 2</string>
    <string name="by_category_cat3">Category 3</string>
    <string name="no_search_results">No results match your search!</string>
    <string name="edit_button">Upload changes</string>
    <string name="exit_button">Return to library</string>
    <string name="content_title">Annotated content</string>
    <string name="cat1_title">Category #1:</string>
    <string name="cat2_title">Category #2:</string>
    <string name="cat3_title">Category #3:</string>
</resources>